@@ -1,4 +1,5 @@
 DSE backports
+ * Decommissioned nodes will not rejoin the cluster (CASSANDRA-8801)
  * Only set broadcast_rpc_address on Ec2MultiRegionSnitch if it's not set (CASSANDRA-11356)
  * Log endpoint and port associated with streaming operation (CASSANDRA-8777)
  * cqlsh: fix tab completion for case-sensitive identifiers (CASSANDRA-11664)
